Show google map on screen and center it to Stockholm
- Add app.js  and google map api to init google map
- Add global.css to put some style :)
- Correction at importing materialize.min.js which weren't on the project
- Add technical choices on readme + new description

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 		<!--Import materialize.css-->
 		<link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
+		<link type="text/css" rel="stylesheet" href="css/global.css" />
 
 		<!--Let browser know website is optimized for mobile-->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -24,7 +25,10 @@
 
 		<!--Import jQuery before materialize.js-->
 		<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-		<script type="text/javascript" src="js/materialize.min.js"></script>
+		<script type="text/javascript" src="js/materialize.js"></script>
+		<script type="text/javascript" src="js/app.js"></script>
+		<!-- Import maps api async and call "initMap" from app.js to initialize the map -->
+		<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCcPHORLdP2U7HcBA3X2BQea4ppj7JLBLM&callback=initMap"></script>
 	</body>
 
 </html>
