Show parkings on screen
- Create an object 'parking' to parse data from JSON
- Get informations for each parking and instanciate markers
- Import API key from opendata website and zoom out to show more parkings
- Update README file

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 		<!--Import jQuery before materialize.js-->
 		<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 		<script type="text/javascript" src="js/materialize.js"></script>
+		<script type="text/javascript" src="js/parkingObj.js"></script>
 		<script type="text/javascript" src="js/app.js"></script>
 		<!-- Import maps api async and call "initMap" from app.js to initialize the map -->
 		<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCcPHORLdP2U7HcBA3X2BQea4ppj7JLBLM&callback=initMap"></script>
