Add information when a marker is clicked
- Add new methods to the parking object
- Add modal infomation when a marker is clicked
- Add more info (and a screenshot) on readme

--- a/index.html
+++ b/index.html
@@ -23,6 +23,20 @@
 		</nav>
 		<div id="map"></div>
 
+		<!-- Modal Structure -->
+		<div id="parking-details" class="modal bottom-sheet">
+			<div class="modal-content">
+				<h4 id="parking-title">Parking information</h4>
+				<p> <b>City District : </b> <span id="city-district"></span> </p>
+				<p> <b>Address : </b><span id="address"></span> </p>
+				<p> <b>Size in meter : </b><span id="vf-meter"></span> </p>
+				<p> <b>Other information : </b><span id="other-information"></span> </p>
+			</div>
+			<div class="modal-footer">
+				<a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Close</a>
+			</div>
+		</div>
+
 		<!--Import jQuery before materialize.js-->
 		<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 		<script type="text/javascript" src="js/materialize.js"></script>
