Go back to full city view from the modal parking info
- A simple yet useful button that allows to go back to the city view when we are on the detail of a parking

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 			</div>
 			<div class="modal-footer">
 				<a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Close</a>
+				<a href="#!" onclick="backToFullView()" class="modal-action modal-close waves-effect waves-green btn-flat">Back to full view</a>
 			</div>
 		</div>
 
