Clean the maps from too much markers by merging them
- Because the map was a bt messy, markers are merged into clusters using the library markerclusterer.js

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 		<!--Import jQuery before materialize.js-->
 		<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 		<script type="text/javascript" src="js/materialize.js"></script>
+		<script type="text/javascript" src="https://googlemaps.github.io/js-marker-clusterer/src/markerclusterer.js"></script>
 		<script type="text/javascript" src="js/parkingObj.js"></script>
 		<script type="text/javascript" src="js/app.js"></script>
 		<!-- Import maps api async and call "initMap" from app.js to initialize the map -->
