Add 'backToFullView' feature when page title is clicked
- Add 'backToFullView' feature when page title is clicked

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<body>
 		<nav>
 			<div class="nav-wrapper">
-				<a href="#" class="brand-logo center">OpenParking Stockholm</a>
+				<a href="#" class="brand-logo center" onclick="backToFullView()">OpenParking Stockholm</a>
 				<ul id="nav-mobile" class="left hide-on-med-and-down">
 					<!-- No menu yet but who knows what could be added :O -->
 				</ul>
